tests/ui/frontmatter/fence-mismatch-2.rs
----cargo
//~^ ERROR: frontmatter close does not match the opening
---cargo
//~^ ERROR: extra characters after frontmatter close are not allowed

fn main() {}
